--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# macOS
-.DS_Store
-._*
+# Compiled class file
+*.class
 
-# Maven outputs
-.classpath
+# Log file
+*.log
 
 # BlueJ files
 *.ctxt
@@ -20,19 +19,18 @@
 *.tar.gz
 *.rar
 
-# IntelliJ
-*.iml
-.idea
-out.java
-out/
-.settings
-.project
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# auto-generated files
+# IDE configurations
+*.iml
+.vscode/
+
+# Build
 target/
 
-# Log file
-*.log
+# Generated Files
+.classpath
+.factorypath
+.project
+.settings/
