Integate Latest Plugin And Schema Change

--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -13,10 +13,8 @@
     "createOnlyProperties": [
         "/properties/Name"
     ],
-    "identifiers": [
-        [
-            "/properties/Name"
-        ]
+    "primaryIdentifier": [
+        "/properties/Name"
     ],
     "additionalProperties": false
 }
