--- a/aws-ses-configurationset/.rpdk-config
+++ b/aws-ses-configurationset/.rpdk-config
@@ -3,5 +3,12 @@
     "language": "java",
     "runtime": "java8",
     "entrypoint": "com.aws.ses.configurationset.HandlerWrapper::handleRequest",
-    "settings": {}
+    "settings": {
+        "namespace": [
+            "com",
+            "aws",
+            "ses",
+            "configurationset"
+        ]
+    }
 }
