Update Config Setting

--- a/aws-ses-configurationset/.rpdk-config
+++ b/aws-ses-configurationset/.rpdk-config
@@ -3,12 +3,5 @@
     "language": "java",
     "runtime": "java8",
     "entrypoint": "com.aws.ses.configurationset.HandlerWrapper::handleRequest",
-    "settings": {
-        "namespace": [
-            "com",
-            "aws",
-            "ses",
-            "configurationset"
-        ]
-    }
+    "settings": {}
 }
