--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -1,7 +1,7 @@
 {
     "typeName": "AWS::SES::ConfigurationSet",
     "description": "Resource schema for AWS::SES::ConfigurationSet.",
-    "sourceUrl": "git@github.com:aws-cloudformation/aws-cloudformation-resource-providers-ses.git",
+    "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-ses.git",
     "properties": {
         "Name": {
             "description": "The name of the configuration set.",
