Add handlers to ConfigurationSet schema json
"handlers" is required to init the handlers in the Java plugin

--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -16,5 +16,27 @@
     "primaryIdentifier": [
         "/properties/Name"
     ],
-    "additionalProperties": false
+    "additionalProperties": false,
+    "handlers": {
+        "create": {
+            "permissions": [
+                "ses:CreateConfigurationSet"
+            ]
+        },
+        "read": {
+            "permissions": [
+                "ses:DescribeConfigurationSet"
+            ]
+        },
+        "delete": {
+            "permissions": [
+                "ses:DeleteConfigurationSet"
+            ]
+        },
+        "list": {
+            "permissions": [
+                "ses:ListConfigurationSets"
+            ]
+        }
+    }
 }
