Add DescribeConfigurationSet permission to create and delete

--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -20,6 +20,7 @@
     "handlers": {
         "create": {
             "permissions": [
+                "ses:DescribeConfigurationSet",
                 "ses:CreateConfigurationSet"
             ]
         },
@@ -30,6 +31,7 @@
         },
         "delete": {
             "permissions": [
+                "ses:DescribeConfigurationSet",
                 "ses:DeleteConfigurationSet"
             ]
         },
