Add handlers to ConfigurationSet schema json (#22)
* Add handlers to ConfigurationSet schema json

"handlers" is required to init the handlers in the Java plugin

* Add DescribeConfigurationSet permission to create and delete

--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -16,5 +16,29 @@
     "primaryIdentifier": [
         "/properties/Name"
     ],
-    "additionalProperties": false
+    "additionalProperties": false,
+    "handlers": {
+        "create": {
+            "permissions": [
+                "ses:DescribeConfigurationSet",
+                "ses:CreateConfigurationSet"
+            ]
+        },
+        "read": {
+            "permissions": [
+                "ses:DescribeConfigurationSet"
+            ]
+        },
+        "delete": {
+            "permissions": [
+                "ses:DescribeConfigurationSet",
+                "ses:DeleteConfigurationSet"
+            ]
+        },
+        "list": {
+            "permissions": [
+                "ses:ListConfigurationSets"
+            ]
+        }
+    }
 }
