throw exceptions in handlers instead of failed statuses

--- a/aws-ses-configurationset/.rpdk-config
+++ b/aws-ses-configurationset/.rpdk-config
@@ -3,6 +3,7 @@
     "language": "java",
     "runtime": "java8",
     "entrypoint": "com.aws.ses.configurationset.HandlerWrapper::handleRequest",
+    "testEntrypoint": "com.aws.ses.configurationset.HandlerWrapper::testEntrypoint",
     "settings": {
         "namespace": [
             "com",
