--- a/aws-ses-receiptfilter/pom.xml
+++ b/aws-ses-receiptfilter/pom.xml
@@ -39,6 +39,12 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.10</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/ses -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
