--- a/buildspec.yml
+++ b/buildspec.yml
@@ -37,5 +37,9 @@ phases:
       - cd "$CODEBUILD_SRC_DIR"
       - cd aws-ses-configurationset
       - mvn clean verify --no-transfer-progress
+      - cd "$CODEBUILD_SRC_DIR"
+      - cd aws-ses-receiptfilter
+      - mvn clean verify --no-transfer-progress
     finally:
       - cat "$CODEBUILD_SRC_DIR/aws-ses-configurationset/rpdk.log"
+      - cat "$CODEBUILD_SRC_DIR/aws-ses-receiptfilter/rpdk.log"
