Update handlers with CFN exceptions
Update handlers to use CFN exceptions, remove stabilization logic, and update unit tests accordingly

--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -17,10 +17,12 @@
         "/properties/Name"
     ],
     "additionalProperties": false,
+    "required": [
+        "Name"
+    ],
     "handlers": {
         "create": {
             "permissions": [
-                "ses:DescribeConfigurationSet",
                 "ses:CreateConfigurationSet"
             ]
         },
@@ -31,7 +33,6 @@
         },
         "delete": {
             "permissions": [
-                "ses:DescribeConfigurationSet",
                 "ses:DeleteConfigurationSet"
             ]
         },
