Add more tests and remove generated ResourceModel for jacoco check

--- a/aws-ses-configurationset/pom.xml
+++ b/aws-ses-configurationset/pom.xml
@@ -161,6 +161,7 @@
                         <exclude>**/BaseConfiguration*</exclude>
                         <exclude>**/BaseHandler*</exclude>
                         <exclude>**/HandlerWrapper*</exclude>
+                        <exclude>**/ResourceModel*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
