--- a/aws-ses-configurationset/aws-ses-configurationset.json
+++ b/aws-ses-configurationset/aws-ses-configurationset.json
@@ -6,8 +6,9 @@
         "Name": {
             "description": "The name of the configuration set.",
             "type": "string",
-            "pattern": "^[a-zA-Z0-9_-]{0,64}$",
-            "maxLength": 64
+            "pattern": "^[a-zA-Z0-9_-]{1,64}$",
+            "maxLength": 64,
+            "minLength": 1
         }
     },
     "createOnlyProperties": [
