--- a/aws-ses-configurationset/pom.xml
+++ b/aws-ses-configurationset/pom.xml
@@ -18,13 +18,6 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>http://central.maven.org/maven2</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <!-- https://github.com/aws-cloudformation/aws-cloudformation-rpdk-java-plugin/ -->
         <dependency>
@@ -117,7 +110,7 @@
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>cfn-cli</executable>
+                            <executable>cfn</executable>
                             <commandlineArgs>generate</commandlineArgs>
                             <workingDirectory>${project.basedir}</workingDirectory>
                         </configuration>
